fix(SignInOut): fix text overflow

--- a/src/components/SignInOut/SignInOut.scss
+++ b/src/components/SignInOut/SignInOut.scss
@@ -32,6 +32,10 @@
   }
 }
 
+.username {
+  white-space: nowrap;
+}
+
 .login-panel {
 
   & :global(.ant-modal-header) {
